--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Scott Sanowitz
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Data Science Fellow
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -23,10 +23,10 @@ footer-links:
   flickr:
   github: barryclark/jekyll-now
   instagram:
-  linkedin:
+  linkedin: www.linkedin.com/in/scott-sanowitz
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: scottiswrong@
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
