--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email: ssanowitz24@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: https://ssanowitz24.github.io/
   instagram:
-  linkedin: www.linkedin.com/in/scott-sanowitz
+  linkedin: https://www.linkedin.com/in/scott-sanowitz/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
