--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Scott Sanowitz
 description: Data Science Fellow
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars2.githubusercontent.com/u/38442301?s=400&u=fa59c17e8abe7c3b66d51f051835a93cf545b17a&v=4
 
 #
 # Flags below are optional
