--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ footer-links:
   email: ssanowitz24@gmail.com
   facebook:
   flickr:
-  github: https://ssanowitz24.github.io/
+  github: https://github.com/ssanowitz24
   instagram:
   linkedin: https://www.linkedin.com/in/scott-sanowitz/
   pinterest:
