--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ footer-links:
   email: ssanowitz24@gmail.com
   facebook:
   flickr:
-  github: https://github.com/ssanowitz24
+  github: ssanowitz24
   instagram:
-  linkedin: https://www.linkedin.com/in/scott-sanowitz/
+  linkedin: scott-sanowitz/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
