--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Scott Sanowitz
 
 # Short bio or description (displayed in the header)
-description: Data Science Fellow
+description: Data Scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/38442301?s=400&u=fa59c17e8abe7c3b66d51f051835a93cf545b17a&v=4
